2012-10-06  Charlie Zender  <zender@uci.edu>

	* ncks: print underscore ("_") instead of missing value

2012-10-05  Charlie Zender  <zender@uci.edu>

 	* NCO 4.2.2 release procedure:
 	Changes since nco-4_2_1: ncks groups, hdr_pad, NULs
	cd ~/nco;cvs tag -d nco-4_2_2;cvs tag -d nco-4_2_2-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.2 release"
	cvs tag -c nco-4_2_2;cvs tag -c nco-4_2_2-1

2012-09-28  Pedro Vicente  <pvicente@uci.edu>

        * ncks: do not create empty groups

2012-09-22  Pedro Vicente  <pvicente@uci.edu>

        * ncks: print variable's data for recursively nested netCDF4 files

2012-09-19  Pedro Vicente  <pvicente@uci.edu>

        * ncks: -G option prints extra dimension information with -D 4

2012-09-11  Charlie Zender  <zender@uci.edu>

	* Remove unused nbr_dmn_fl from nco_cnk_sz_set()

	* Tweak i18n machinery

2012-09-10  Charlie Zender  <zender@uci.edu>

	* Add median filter ncmdn

	* Refine DRN/MRO documentation

2012-09-09  Charlie Zender  <zender@uci.edu>

	* Improve diagnostics in nco_dfl_case_nc_type_err() error message

2012-09-07  Charlie Zender  <zender@uci.edu>

	* Add filters ncmax, ncavg, ncrng

2012-09-05  Pedro Vicente  <pvicente@uci.edu>

        * ncks: implement -c (extract coordinate variables) for group hierarchies

2012-09-04  Charlie Zender  <zender@uci.edu>

	* nco_att_cpy() now attempts to copy array-valued missing values
	Attempt will likely fail, but some old files have these arrays,
	and older versions of netCDF allow it to succeed.
	Since this is a metadata convention, and NCO is
	convention-agnostic, NCO will attempt it and allow the netCDF
	layer, not NCO, to cause the failure.

2012-09-03  Charlie Zender  <zender@uci.edu>

	* Restore trailing NUL to append mode, yet overwrite previous trailing NUL

2012-09-02  Charlie Zender  <zender@uci.edu>

	* Add trailing NUL character to ncatted in create/modify/overwrite modes

	* Add --hdr_pad to man pages

2012-09-01  Charlie Zender  <zender@uci.edu>
