@@ -1,4 +1,4 @@
-<!-- $Header: /data/zender/nco_20150216/nco/doc/index.shtml,v 1.729 2012-09-21 12:36:36 zender Exp $
+<!-- $Header: /data/zender/nco_20150216/nco/doc/index.shtml,v 1.730 2012-10-07 00:47:19 zender Exp $
 Purpose: NCO homepage
 
 URL:
@@ -573,6 +573,7 @@ Optimize diskless/RAM files?;
 more Robust RHEL/CentOS autoconf support?;
 <li><b>NCO 4.2.2</b>: (<i>In Progress, features already in beta include the following</i>)</li>
 <tt>--hdr_pad</tt> all operators;</li>
+<tt>ncks</tt> prints underscores;</li>
 <tt>ncwa</tt> on Windows;</li>
 <tt>ncks</tt> supports netCDF4 groups;</li>
 <li><b>NCO 4.2.1</b>: (<i>Current Stable Release</i>)
